Enhancement: Ensure comment sentences wrap inside comment container   - Implemented CSS styling to ensure comment sentences wrap within the confines of the comment container, preventing overflow.
Improvement: Filter data before saving in local storage
  - Implemented data filtering to sanitize input before saving it to local storage, ensuring data integrity and security.

Enhancement: Remove "No comments" paragraph when user adds a new comment on single blog page
  - Implemented logic to dynamically remove the "No comments" paragraph from the single blog page when a new comment is added, providing a seamless user experience.

Enhancement: Dynamically create paragraphs for blog content
  - Implemented dynamic paragraph creation based on the size of blog content, ensuring readability and aesthetics.

Enhancement: Add validation on create new blog form
  - Implemented form validation to ensure required fields are filled and enforce size limits on uploaded images, enhancing user experience and data integrity.

--- a/styles/components/dashboard/admin-new-blog.css
+++ b/styles/components/dashboard/admin-new-blog.css
@@ -96,3 +96,8 @@ body.mceContentBody {
 
 /* 2xl */
 /* @media(min-width:1536px){} */
+.error {
+  font-size: var(--size-base);
+  color: red;
+  font-weight: 600;
+}
