--- a/styles/components/header-test.css
+++ b/styles/components/header-test.css
@@ -77,7 +77,8 @@
   top: 0;
   right: 0;
   height: 100vh;
-  width: 250px;
+  /* width: 250px; */
+  width: 388px;
   z-index: 999999;
   background-color: rgb(9 23 51);
   backdrop-filter: blur(10px);
@@ -117,7 +118,7 @@
   font-size: var(--size-xl);
 }
 .menu-icon {
-  color: wheat;
+  color: white;
 }
 
 @media (max-width: 820px) {
@@ -151,6 +152,7 @@
 
 @media (max-width: 475px) {
   .sidebar {
-    width: 100%;
+    /* width: 100%; */
+    width: 76%;
   }
 }
